Fix problem in PhoneGap on Android where the main employee list would not scroll at all.

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -70,6 +70,7 @@ a {
 
 .list {
     list-style-type: none;
+    overflow: hidden;
 }
 
 .list > li {
